--- a/CSRF/views/index.ejs
+++ b/CSRF/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <input type="hidden" name="_csrf", value=<%=csrfTokenFromServer%>/>
   </body>
 </html>
